# iracing-schedule-pdf-parser

./: .gitignore  README.md  parse_schedule_pdf.py  pyproject.toml
.github/workflows/: parse-schedule.yml
data/mobile/v1/: manifest.json
data/mobile/v1/releases/2026-s3/b973e3f6/: cars.json  season.json  tracks.json
data/mobile/v1/releases/2026-s3/febb8cce/: cars.json  season.json  tracks.json
docs/superpowers/plans/: 2026-06-26-mobile-json-mapper-supabase-pipeline.md
docs/superpowers/specs/: 2026-06-26-mobile-json-mapper-supabase-pipeline-design.md
pdf_schedule_parser/: __init__.py  cli.py  extract.py  ids.py  models.py  normalize.py  parse.py  validate.py
schedule_data_pipeline/: __init__.py  cli.py  jsonio.py  manifest.py  mapper.py  models.py  publisher.py  validator.py
tests/: __init__.py  test_cli.py  test_ids.py  test_normalize.py  test_parse.py  test_pipeline_cli.py  test_pipeline_manifest.py  test_pipeline_mapper.py  test_pipeline_publisher.py  test_pipeline_validator.py  test_project.py  test_validate.py
tests/fixtures/: sample_schedule_text.txt
tests/fixtures/raw_pipeline/: car-classes.json  cars.json  parser-report.json  season.json  tracks.json
